--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
 layout: home
 author_profile: true
+header:
+  overlay_image: /assets/images/yoseit_cover.png
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  #caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  teaser: /assets/images/ysemit_cover.png
+  actions:
+    #- label: "More Info"
+    #  url: "https://unsplash.com"
+
 ---
 
 <p>This text should appear above the recent posts.</p>
