--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: grid
+layout: home
 author_profile: true
 header:
   overlay_image: /assets/images/yosemit_cover.png
@@ -9,4 +9,7 @@ header:
   actions:
     #- label: "More Info"
     #  url: "https://unsplash.com"
+
 ---
+
+<p>Welcome!</p>
